# rofi-github

./: .gitignore  README.md  pyproject.toml  test.sh
rofi_github/: main.py
